# convnet_rust

./: Cargo.toml  README.md
src/: dataloader.rs  functions.rs  gradient.rs  layers.rs  lib.rs  main.rs  model.rs  nodes.rs  weights.rs
src/dataloader/: mnist.rs
src/functions/: non_linear_old.rs
src/layers/neuron/: hidden.rs  output.rs
src/nodes/neuron/: hidden.rs  output.rs
