[package]
name = "convnet"
version = "0.1.0"
authors = ["Ogban <ogbanugot@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
ndarray = { version = "0.15.0", features = ["blas"] }
blas-src = { version = "0.8", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
ndarray-rand = "0.14.0"
ndarray-linalg = "0.14.1"
ndarray-stats = "0.5.0"